Fix single.php spacing for author box & replay title.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -38,7 +38,7 @@
 	.sidebar-bg { background-image: none !important; margin-bottom: 0; }
 	#sidebar { width: 100%; background: #f9f9f9; margin-top: 30px; padding: 30px; border: 1px solid #ddd; }
 	#error-page-text { font-size: 14px }
-	#author-image { margin-bottom: 20px }
+	#author-image { margin-bottom: 10px }
 	#author-bio { width: 100% }
     .author-inner { flex-direction: column }
 	.comment-details { margin-left: 0 }
